--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
+  vector_math: ^2.1.2
 
 dev_dependencies:
   flutter_test:
